monitor-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-demo
  namespace: suxess-it-dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: monitor-demo
  type: ClusterIP
